[FEAT-1] Add serving of static files

--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,5 +1,8 @@
 <header>
-  <h1> Frank Design </h1>
+  <h1>
+    <img src='assets/frank-design.png' alt='Frank Design' /> 
+    Frank Design
+  </h1>
   <a href='/'>Home</a>
   <a href='/about'>About</a>
   <a href='/work'>Work</a>
